Vision/Source/Atmcd32d.h

typedef struct ANDORCAPS
{
  ULONG ulSize;
  ULONG ulAcqModes;
  ULONG ulReadModes;
  ULONG ulTriggerModes;
  ULONG ulCameraType;
  ULONG ulPixelMode;
  ULONG ulSetFunctions;
  ULONG ulGetFunctions;
  ULONG ulFeatures;
  ULONG ulPCICard;
} AndorCapabilities;
EXPNETTYPE unsigned int WINAPI AbortAcquisition(void);
EXPNETTYPE unsigned int WINAPI CoolerOFF(void);
EXPNETTYPE unsigned int WINAPI CoolerON(void);
EXPNETTYPE unsigned int WINAPI FreeInternalMemory();
EXPNETTYPE unsigned int WINAPI GetAcquiredData(long * array, unsigned long size);
EXPNETTYPE unsigned int WINAPI GetAcquiredData16(WORD* array, unsigned long size);
EXPNETTYPE unsigned int WINAPI GetAcquiredFloatData(float* array, unsigned long size);
EXPNETTYPE unsigned int WINAPI GetAcquisitionProgress(long* acc, long* series);
EXPNETTYPE unsigned int WINAPI GetAcquisitionTimings(float* exposure, float* accumulate, float* kinetic);
EXPNETTYPE unsigned int WINAPI GetAllDMAData(long* array, unsigned long size);
EXPNETTYPE unsigned int WINAPI GetAmpDesc(int index, char* name, int len);
EXPNETTYPE unsigned int WINAPI GetAmpMaxSpeed(int index, float* speed);
EXPNETTYPE unsigned int WINAPI GetAvailableCameras(long* totalCameras);
EXPNETTYPE unsigned int WINAPI GetBackground(long* array, unsigned long size);
EXPNETTYPE unsigned int WINAPI GetCameraHandle(long cameraIndex, long* cameraHandle);
EXPNETTYPE unsigned int WINAPI GetCameraSerialNumber(int* number);
EXPNETTYPE unsigned int WINAPI GetCapabilities(AndorCapabilities* caps);
EXPNETTYPE unsigned int WINAPI GetCurrentCamera(long* cameraHandle);
EXPNETTYPE unsigned int WINAPI GetDDGIOCPulses(int* pulses);
EXPNETTYPE unsigned int WINAPI GetDDGPulse(double width, double resolution, double* Delay, double *Width);
EXPNETTYPE unsigned int WINAPI GetDetector(int* xpixels, int* ypixels);
EXPNETTYPE unsigned int WINAPI GetFilterMode(int* mode);
EXPNETTYPE unsigned int WINAPI GetFKExposureTime(float* time);
EXPNETTYPE unsigned int WINAPI GetFKVShiftSpeed(int index, int* speed);
EXPNETTYPE unsigned int WINAPI GetFKVShiftSpeedF(int index, float* speed);
EXPNETTYPE unsigned int WINAPI GetHardwareVersion(unsigned int* PCB, unsigned int* Decode, unsigned int* SerPar, unsigned int* Clocks, unsigned int* dummy1, unsigned int* dummy2);
EXPNETTYPE unsigned int WINAPI GetHeadModel(char* name);
EXPNETTYPE unsigned int WINAPI GetHorizontalSpeed(int index, int* speed);
EXPNETTYPE unsigned int WINAPI GetHSSpeed(int channel, int type, int index, float* speed);
EXPNETTYPE unsigned int WINAPI GetID(int devNum, int* id);
EXPNETTYPE unsigned int WINAPI GetImagesPerDMA(unsigned long* images);
EXPNETTYPE unsigned int WINAPI GetNewData(long* array, unsigned long size);
EXPNETTYPE unsigned int WINAPI GetNewData8(unsigned char* array, unsigned long size);
EXPNETTYPE unsigned int WINAPI GetNewData16(WORD* array, unsigned long size);
EXPNETTYPE unsigned int WINAPI GetNewFloatData(float* array, unsigned long size);
EXPNETTYPE unsigned int WINAPI GetNumberADChannels(int* channels);
EXPNETTYPE unsigned int WINAPI GetNumberAmp(int* amp);
EXPNETTYPE unsigned int WINAPI GetNumberDevices(int* numDevs);
EXPNETTYPE unsigned int WINAPI GetNumberFKVShiftSpeeds(int* number);
EXPNETTYPE unsigned int WINAPI GetNumberHorizontalSpeeds(int* number);
EXPNETTYPE unsigned int WINAPI GetNumberHSSpeeds(int channel, int type, int* speeds);
EXPNETTYPE unsigned int WINAPI GetNumberPreAmpGains(int* noGains);
EXPNETTYPE unsigned int WINAPI GetNumberVerticalSpeeds(int* number);
EXPNETTYPE unsigned int WINAPI GetNumberVSSpeeds(int* speeds);
EXPNETTYPE unsigned int WINAPI GetPixelSize(float* xSize, float* ySize);
EXPNETTYPE unsigned int WINAPI GetPreAmpGain(int index, float* gain);
EXPNETTYPE unsigned int WINAPI GetRegisterDump(int* mode);
EXPNETTYPE unsigned int WINAPI GetSoftwareVersion(unsigned int* eprom, unsigned int* coffile, unsigned int* vxdrev, unsigned int* vxdver, unsigned int* dllrev, unsigned int* dllver);
EXPNETTYPE unsigned int WINAPI GetStatus(int* status);
EXPNETTYPE unsigned int WINAPI GetTemperature(int* temperature);
EXPNETTYPE unsigned int WINAPI GetTemperatureF(float* temperature);
EXPNETTYPE unsigned int WINAPI GetTemperatureRange(int* mintemp,int* maxtemp);
EXPNETTYPE unsigned int WINAPI GetVerticalSpeed(int index, int* speed);
EXPNETTYPE unsigned int WINAPI GetVSSpeed(int index, float* speed);
EXPNETTYPE unsigned int WINAPI GPIBReceive(int id, short address, char* text, int size);
EXPNETTYPE unsigned int WINAPI GPIBSend(int id, short address, char* text);
EXPNETTYPE unsigned int WINAPI I2CBurstRead(BYTE i2cAddress, long nBytes, BYTE* data);
EXPNETTYPE unsigned int WINAPI I2CBurstWrite(BYTE i2cAddress, long nBytes, BYTE* data);
EXPNETTYPE unsigned int WINAPI I2CRead(BYTE deviceID, BYTE intAddress, BYTE* pdata);
EXPNETTYPE unsigned int WINAPI I2CReset(void);
EXPNETTYPE unsigned int WINAPI I2CWrite(BYTE deviceID, BYTE intAddress, BYTE data);
EXPNETTYPE unsigned int WINAPI IdAndorDll();
EXPNETTYPE unsigned int WINAPI InAuxPort(int port, int* state);
EXPNETTYPE unsigned int WINAPI Initialize(char * dir);	 //	read ini file to get head and card
EXPNETTYPE unsigned int WINAPI Merge(const long* array, long nOrder, long nPoint, long nPixel, float* coeff, long fit, long hbin,
                          long* output, float* start, float* step);
EXPNETTYPE unsigned int WINAPI OutAuxPort(int port, int state);
EXPNETTYPE unsigned int WINAPI PrepareAcquisition();
EXPNETTYPE unsigned int WINAPI SaveAsBmp(char* path, char* palette, long ymin, long ymax);
EXPNETTYPE unsigned int WINAPI SaveAsCommentedSif(char* path, char* comment);
EXPNETTYPE unsigned int WINAPI SaveAsEDF(char* _szPath, int _iMode);
EXPNETTYPE unsigned int WINAPI SaveAsSif(char* path);
EXPNETTYPE unsigned int WINAPI SelectDevice(int devNum);
EXPNETTYPE unsigned int WINAPI SetAccumulationCycleTime(float time);
EXPNETTYPE unsigned int WINAPI SetAcquisitionMode(int mode);
EXPNETTYPE unsigned int WINAPI SetAcquisitionType(int type);
EXPNETTYPE unsigned int WINAPI SetADChannel(int channel);
EXPNETTYPE unsigned int WINAPI SetBackground(long* array, unsigned long size);
EXPNETTYPE unsigned int WINAPI SetBaselineClamp(int state);
EXPNETTYPE unsigned int WINAPI SetComplexImage(int numAreas, int* areas);
EXPNETTYPE unsigned int WINAPI SetCurrentCamera(long cameraHandle);
EXPNETTYPE unsigned int WINAPI SetCustomTrackHBin(int bin);
EXPNETTYPE unsigned int WINAPI SetDataType(int type);
EXPNETTYPE unsigned int WINAPI SetDDGAddress(BYTE t0, BYTE t1, BYTE t2, BYTE tt, BYTE address);
EXPNETTYPE unsigned int WINAPI SetDDGGain(int gain);
EXPNETTYPE unsigned int WINAPI SetDDGGateStep(double step);
EXPNETTYPE unsigned int WINAPI SetDDGInsertionDelay(int state);
EXPNETTYPE unsigned int WINAPI SetDDGIntelligate(int state);
EXPNETTYPE unsigned int WINAPI SetDDGIOC(int state);
EXPNETTYPE unsigned int WINAPI SetDDGIOCFrequency(double frequency);
EXPNETTYPE unsigned int WINAPI SetDDGTimes(double t0, double t1, double t2);
EXPNETTYPE unsigned int WINAPI SetDDGTriggerMode(int mode);
EXPNETTYPE unsigned int WINAPI SetDDGVariableGateStep(int mode, double p1, double p2);
EXPNETTYPE unsigned int WINAPI SetDelayGenerator(int board, short address, int type);
EXPNETTYPE unsigned int WINAPI SetDriverEvent(HANDLE event);
EXPNETTYPE unsigned int WINAPI SetEMCCDGain(int gain);
EXPNETTYPE unsigned int WINAPI SetExposureTime(float time);
EXPNETTYPE unsigned int WINAPI SetFanMode(int mode);
EXPNETTYPE unsigned int WINAPI SetFastExtTrigger(int mode);
EXPNETTYPE unsigned int WINAPI SetFastKinetics(int exposedRows, int seriesLength, float time, int mode, int hbin, int vbin);
EXPNETTYPE unsigned int WINAPI SetFastKineticsEx(int exposedRows, int seriesLength, float time, int mode, int hbin, int vbin, int offset);
EXPNETTYPE unsigned int WINAPI SetFilterMode(int mode);
EXPNETTYPE unsigned int WINAPI SetFilterParameters(int width, float sensitivity, int range, float accept, int smooth, int noise);
EXPNETTYPE unsigned int WINAPI SetFKVShiftSpeed(int index);
EXPNETTYPE unsigned int WINAPI SetFullImage(int hbin, int vbin);
EXPNETTYPE unsigned int WINAPI SetFVBHBin(int bin);
EXPNETTYPE unsigned int WINAPI SetGain(int gain);
EXPNETTYPE unsigned int WINAPI SetGate(float delay, float width, float step);
EXPNETTYPE unsigned int WINAPI SetGateMode(int gatemode);
EXPNETTYPE unsigned int WINAPI SetHighCapacity(int state);
EXPNETTYPE unsigned int WINAPI SetHorizontalSpeed(int index);
EXPNETTYPE unsigned int WINAPI SetHSSpeed(int type, int index);
EXPNETTYPE unsigned int WINAPI SetImage(int hbin, int vbin, int hstart, int hend, int vstart, int vend);
EXPNETTYPE unsigned int WINAPI SetKineticCycleTime(float time);
EXPNETTYPE unsigned int WINAPI SetMCPGating(int gating);
EXPNETTYPE unsigned int WINAPI SetMessageWindow(HWND wnd);
EXPNETTYPE unsigned int WINAPI SetMultiTrack(int number, int height, int offset,int* bottom,int* gap);
EXPNETTYPE unsigned int WINAPI SetMultiTrackHBin(int bin);
EXPNETTYPE unsigned int WINAPI SetNextAddress(long* data, long lowAdd, long highAdd, long len, long physical);
EXPNETTYPE unsigned int WINAPI SetNumberAccumulations(int number);
EXPNETTYPE unsigned int WINAPI SetNumberKinetics(int number);
EXPNETTYPE unsigned int WINAPI SetOutputAmplifier(int type);
EXPNETTYPE unsigned int WINAPI SetPhotonCounting(int state);
EXPNETTYPE unsigned int WINAPI SetPhotonCountingThreshold(long min, long max);
EXPNETTYPE unsigned int WINAPI SetPixelMode(int bitdepth, int colormode);
EXPNETTYPE unsigned int WINAPI SetPreAmpGain(int index);
EXPNETTYPE unsigned int WINAPI SetRandomTracks(int numTracks, int* areas);
EXPNETTYPE unsigned int WINAPI SetReadMode(int mode);
EXPNETTYPE unsigned int WINAPI SetRegisterDump(int mode);
EXPNETTYPE unsigned int WINAPI SetShutter(int type, int mode, int closingtime, int openingtime);
EXPNETTYPE unsigned int WINAPI SetSifComment(char* comment);
EXPNETTYPE unsigned int WINAPI SetSingleTrack(int centre, int height);
EXPNETTYPE unsigned int WINAPI SetSingleTrackHBin(int bin);
EXPNETTYPE unsigned int WINAPI SetSpool(int active, int method, char* path, int framebuffersize);
EXPNETTYPE unsigned int WINAPI SetStorageMode(long mode);
EXPNETTYPE unsigned int WINAPI SetTemperature(int temperature);
EXPNETTYPE unsigned int WINAPI SetTriggerMode(int mode);
EXPNETTYPE unsigned int WINAPI SetUserEvent(HANDLE event);
EXPNETTYPE unsigned int WINAPI SetUSGenomics(long width, long height);
EXPNETTYPE unsigned int WINAPI SetVerticalRowBuffer(int rows);
EXPNETTYPE unsigned int WINAPI SetVerticalSpeed(int index);
EXPNETTYPE unsigned int WINAPI SetVSAmplitude(int index);
EXPNETTYPE unsigned int WINAPI SetVSSpeed(int index);
EXPNETTYPE unsigned int WINAPI ShutDown(void);
EXPNETTYPE unsigned int WINAPI StartAcquisition(void);
EXPNETTYPE unsigned int WINAPI UnMapPhysicalAddress();