Vision/Source/ATMCD32D.pas


    function SetExposureTime; external 'atmcd32d.dll' name 'SetExposureTime';
    function SetNumberAccumulations; external 'atmcd32d.dll' name 'SetNumberAccumulations';
    function SetAccumulationCycleTime; external 'atmcd32d.dll' name 'SetAccumulationCycleTime';
    function SetNumberKinetics; external 'atmcd32d.dll' name 'SetNumberKinetics';
    function SetKineticCycleTime; external 'atmcd32d.dll' name 'SetKineticCycleTime';
    function SetAcquisitionMode; external 'atmcd32d.dll' name 'SetAcquisitionMode';
    function SetHorizontalSpeed; external 'atmcd32d.dll' name 'SetHorizontalSpeed';
    function SetVerticalSpeed; external 'atmcd32d.dll' name 'SetVerticalSpeed';
    function SetReadMode; external 'atmcd32d.dll' name 'SetReadMode';
    function SetPhotonCounting; external 'atmcd32d.dll' name 'SetPhotonCounting';
    function SetPhotonCountingThreshold; external 'atmcd32d.dll' name 'SetPhotonCountingThreshold';
    function SetMultiTrack; external 'atmcd32d.dll' name 'SetMultiTrack';
    function SetSingleTrack; external 'atmcd32d.dll' name 'SetSingleTrack';
    function SetFullImage; external 'atmcd32d.dll' name 'SetFullImage';
    function GetAcquisitionTimings; external 'atmcd32d.dll' name 'GetAcquisitionTimings';
    function PrepareAcquisition; external 'atmcd32d.dll' name 'PrepareAcquisition';
    function FreeInternalMemory; external 'atmcd32d.dll' name 'FreeInternalMemory';
    function StartAcquisition; external 'atmcd32d.dll' name 'StartAcquisition';
    function AbortAcquisition; external 'atmcd32d.dll' name 'AbortAcquisition';
    function GetAcquiredData; external 'atmcd32d.dll' name 'GetAcquiredData';
    function GetStatus; external 'atmcd32d.dll' name 'GetStatus';
    function SetTriggerMode; external 'atmcd32d.dll' name 'SetTriggerMode';
    function Initialize; external 'atmcd32d.dll' name 'Initialize';
    function ShutDown; external 'atmcd32d.dll' name 'ShutDown';
    function SetTemperature; external 'atmcd32d.dll' name 'SetTemperature';
    function GetTemperature; external 'atmcd32d.dll' name 'GetTemperature';
    function GetTemperatureF; external 'atmcd32d.dll' name 'GetTemperatureF';
    function GetTemperatureRange; external 'atmcd32d.dll' name 'GetTemperatureRange';
    function CoolerON; external 'atmcd32d.dll' name 'CoolerON';
    function CoolerOFF; external 'atmcd32d.dll' name 'CoolerOFF';
    function SetShutter; external 'atmcd32d.dll' name 'SetShutter';
    function OutAuxPort; external 'atmcd32d.dll' name 'OutAuxPort';
    function InAuxPort; external 'atmcd32d.dll' name 'InAuxPort';
    function GetNumberHorizontalSpeeds; external 'atmcd32d.dll' name 'GetNumberHorizontalSpeeds';
    function GetHorizontalSpeed; external 'atmcd32d.dll' name 'GetHorizontalSpeed';
    function GetNumberVerticalSpeeds; external 'atmcd32d.dll' name 'GetNumberVerticalSpeeds';
    function GetVerticalSpeed; external 'atmcd32d.dll' name 'GetVerticalSpeed';
    function GetDetector; external 'atmcd32d.dll' name 'GetDetector';
    function GetImagesPerDMA; external 'atmcd32d.dll' name 'GetImagesPerDMA';
    function GetSoftwareVersion; external 'atmcd32d.dll' name 'GetSoftwareVersion';
    function GetHardwareVersion; external 'atmcd32d.dll' name 'GetHardwareVersion';
    function SetImage; external 'atmcd32d.dll' name 'SetImage';
    function SetUSGenomics; external 'atmcd32d.dll' name 'SetUSGenomics';
    function SetFastKinetics; external 'atmcd32d.dll' name 'SetFastKinetics';
    function SetFastKineticsEx; external 'atmcd32d.dll' name 'SetFastKineticsEx';
    function GetFKExposureTime; external 'atmcd32d.dll' name 'GetFKExposureTime';
    function GetNumberFKVShiftSpeeds; external 'atmcd32d.dll' name 'GetNumberFKVShiftSpeeds';
    function SetFKVShiftSpeed; external 'atmcd32d.dll' name 'SetFKVShiftSpeed';
    function GetFKVShiftSpeed; external 'atmcd32d.dll' name 'GetFKVShiftSpeed';
    function GetFKVShiftSpeedF; external 'atmcd32d.dll' name 'GetFKVShiftSpeedF';
    function SetComplexImage; external 'atmcd32d.dll' name 'SetComplexImage';
    function SetRandomTracks; external 'atmcd32d.dll' name 'SetRandomTracks';
    function SetDriverEvent; external 'atmcd32d.dll' name 'SetDriverEvent';
    function I2CBurstWrite; external 'atmcd32d.dll' name 'I2CBurstWrite';
    function I2CBurstRead; external 'atmcd32d.dll' name 'I2CBurstRead';
    function I2CReset; external 'atmcd32d.dll' name 'I2CReset';
    function I2CRead; external 'atmcd32d.dll' name 'I2CRead';
    function I2CWrite; external 'atmcd32d.dll' name 'I2CWrite';
    function SetGain; external 'atmcd32d.dll' name 'SetGain';
    function SetMCPGating; external 'atmcd32d.dll' name 'SetMCPGating';
    function SetGateMode; external 'atmcd32d.dll' name 'SetGateMode';
    function SetFilterMode; external 'atmcd32d.dll' name 'SetFilterMode';
    function GetFilterMode; external 'atmcd32d.dll' name 'GetFilterMode';
    function SetFilterParameters; external 'atmcd32d.dll' name 'SetFilterParameters';
    function GPIBSend; external 'atmcd32d.dll' name 'GPIBSend';
    function GPIBReceive; external 'atmcd32d.dll' name 'GPIBReceive';
    function SaveAsEDF; external 'atmcd32d.dll' name 'SaveAsEDF';
    function SaveAsSif; external 'atmcd32d.dll' name 'SaveAsSif';
    function SaveAsCommentedSif; external 'atmcd32d.dll' name 'SaveAsCommentedSif';
    function SetSifComment; external 'atmcd32d.dll' name 'SetSifComment';
    function GetAvailableCameras; external 'atmcd32d.dll' name 'GetAvailableCameras';
    function SetCurrentCamera; external 'atmcd32d.dll' name 'SetCurrentCamera';
    function GetCurrentCamera; external 'atmcd32d.dll' name 'GetCurrentCamera';
    function GetCameraHandle; external 'atmcd32d.dll' name 'GetCameraHandle';
    function SetDelayGenerator; external 'atmcd32d.dll' name 'SetDelayGenerator';
    function SetGate; external 'atmcd32d.dll' name 'SetGate';
    function SetSingleTrackHBin; external 'atmcd32d.dll' name 'SetSingleTrackHBin';
    function SetMultiTrackHBin; external 'atmcd32d.dll' name 'SetMultiTrackHBin';
    function SetFVBHBin; external 'atmcd32d.dll' name 'SetFVBHBin';
    function SetCustomTrackHBin; external 'atmcd32d.dll' name 'SetCustomTrackHBin';
    function GetNewData; external 'atmcd32d.dll' name 'GetNewData';
    function GetAllDMAData; external 'atmcd32d.dll' name 'GetAllDMAData';
    function GetDDGIOCPulses; external 'atmcd32d.dll' name 'GetDDGIOCPulses';
    function GetDDGPulse; external 'atmcd32d.dll' name 'GetDDGPulse';
    function SetDDGAddress; external 'atmcd32d.dll' name 'SetDDGAddress';
    function SetDDGGain; external 'atmcd32d.dll' name 'SetDDGGain';
    function SetDDGGateStep; external 'atmcd32d.dll' name 'SetDDGGateStep';
    function SetDDGInsertionDelay; external 'atmcd32d.dll' name 'SetDDGInsertionDelay';
    function SetDDGIntelligate; external 'atmcd32d.dll' name 'SetDDGIntelligate';
    function SetDDGIOC; external 'atmcd32d.dll' name 'SetDDGIOC';
    function SetDDGIOCFrequency; external 'atmcd32d.dll' name 'SetDDGIOCFrequency';
    function SetDDGTimes; external 'atmcd32d.dll' name 'SetDDGTimes';
    function SetDDGTriggerMode; external 'atmcd32d.dll' name 'SetDDGTriggerMode';
    function SetDDGVariableGateStep; external 'atmcd32d.dll' name 'SetDDGVariableGateStep';
    function SetEMCCDGain; external 'atmcd32d.dll' name 'SetEMCCDGain';
    function SaveAsBmp; external 'atmcd32d.dll' name 'SaveAsBmp';
    function SaveToClipboard; external 'atmcd32d.dll' name 'SaveToClipboard';    
    function SetSpool; external 'atmcd32d.dll' name 'SetSpool';
    function SetFastExtTrigger; external 'atmcd32d.dll' name 'SetFastExtTrigger';
    function GetAcquisitionProgress; external 'atmcd32d.dll' name 'GetAcquisitionProgress';
    function Merge; external 'atmcd32d.dll' name 'Merge';
    function GetNumberADChannels; external 'atmcd32d.dll' name 'GetNumberADChannels';
    function SetADChannel; external 'atmcd32d.dll' name 'SetADChannel';
    function GetNumberHSSpeeds; external 'atmcd32d.dll' name 'GetNumberHSSpeeds';
    function GetHSSpeed; external 'atmcd32d.dll' name 'GetHSSpeed';
    function SetHSSpeed; external 'atmcd32d.dll' name 'SetHSSpeed';
    function GetNumberVSSpeeds; external 'atmcd32d.dll' name 'GetNumberVSSpeeds';
    function GetVSSpeed; external 'atmcd32d.dll' name 'GetVSSpeed';
    function SetVSSpeed; external 'atmcd32d.dll' name 'SetVSSpeed';
    function SetVSAmplitude; external 'atmcd32d.dll' name 'SetVSAmplitude';
    function SetFanMode; external 'atmcd32d.dll' name 'SetFanMode';
    function GetNumberAmp; external 'atmcd32d.dll' name 'GetNumberAmp';
    function GetAmpMaxSpeed; external 'atmcd32d.dll' name 'GetAmpMaxSpeed';
    function GetAmpDesc; external 'atmcd32d.dll' name 'GetAmpDesc';
    function SetVerticalRowBuffer; external 'atmcd32d.dll' name 'SetVerticalRowBuffer';
    function GetRegisterDump; external 'atmcd32d.dll' name 'GetRegisterDump';
    function SetRegisterDump; external 'atmcd32d.dll' name 'SetRegisterDump';
    function GetCameraSerialNumber; external 'atmcd32d.dll' name 'GetCameraSerialNumber';
    function GetPixelSize; external 'atmcd32d.dll' name 'GetPixelSize';
    function GetHeadModel; external 'atmcd32d.dll' name 'GetHeadModel';
    function GetNewData16; external 'atmcd32d.dll' name 'GetNewData16';
    function GetAcquiredData16; external 'atmcd32d.dll' name 'GetAcquiredData16';
    function GetNewData8; external 'atmcd32d.dll' name 'GetNewData8';
    function GetCapabilities; external 'atmcd32d.dll' name 'GetCapabilities';
    function SetMessageWindow; external 'atmcd32d.dll' name 'SetMessageWindow';
    function SelectDevice; external 'atmcd32d.dll' name 'SelectDevice';
    function GetNumberDevices; external 'atmcd32d.dll' name 'GetNumberDevices';
    function GetID; external 'atmcd32d.dll' name 'GetID';
    function SetPixelMode; external 'atmcd32d.dll' name 'SetPixelMode';
    function IdAndorDll; external 'atmcd32d.dll' name 'IdAndorDll';
    function SetAcquisitionType; external 'atmcd32d.dll' name 'SetAcquisitionType';
    function SetDataType; external 'atmcd32d.dll' name 'SetDataType';
    function SetBackground; external 'atmcd32d.dll' name 'SetBackground';
    function GetBackground; external 'atmcd32d.dll' name 'GetBackground';
    function GetAcquiredFloatData; external 'atmcd32d.dll' name 'GetAcquiredFloatData';
    function GetNewFloatData; external 'atmcd32d.dll' name 'GetNewFloatData';
    function SetBaselineClamp; external 'atmcd32d.dll' name 'SetBaselineClamp';
    function SetHighCapacity; external 'atmcd32d.dll' name 'SetHighCapacity';
    function SetOutputAmplifier; external 'atmcd32d.dll' name 'SetOutputAmplifier';
    function GetNumberPreAmpGains; external 'atmcd32d.dll' name 'GetNumberPreAmpGains';
    function GetPreAmpGain; external 'atmcd32d.dll' name 'GetPreAmpGain';
    function SetPreAmpGain; external 'atmcd32d.dll' name 'SetPreAmpGain';
    function SetUserEvent; external 'atmcd32d.dll' name 'SetUserEvent';
    function SetStorageMode; external 'atmcd32d.dll' name 'SetStorageMode';
    function SetNextAddress; external 'atmcd32d.dll' name 'SetNextAddress'; 
    function UnMapPhysicalAddress; external 'atmcd32d.dll' name 'UnMapPhysicalAddress';
